--- a/scss/loyout/_02-projects.scss
+++ b/scss/loyout/_02-projects.scss
@@ -5,7 +5,7 @@
     width: 370px;
     height: 110px;
     padding: 20px 23px 19px 23px;
-    border: solid var(--color-div); 
+    border: solid getColor(div); 
     border-width: 0 1px 1px 1px;
     background-color: #FFFFFF;
     position: relative;
@@ -25,11 +25,11 @@
     font-size: 16px;
     line-height: 187%;
     letter-spacing: 0.03em;
-    color: var(--color-text);
+    color: getColor(text);
     justify-content: left;
 }
 .project-list-item{
-    background-color: var(--color-light);
+    background-color: getColor(light);
     max-width: 370px;
     cursor: pointer;
 
@@ -53,7 +53,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(33, 150, 243, 0.9);
+  background-color: getColor(div-text);
 
   transform: translatey(100%);
   transition-property: transform;
@@ -68,6 +68,6 @@
     font-size: 18px;
     line-height: 156%;
     letter-spacing: 0.03em;
-    color: #fff;
+    color: getColor(light);
     padding: 63px 24px;
 }
