--- a/scss/loyout/_05-team.scss
+++ b/scss/loyout/_05-team.scss
@@ -18,7 +18,7 @@
     gap: 10px;
     margin-top: 16px;
 }
-.social-item{
+.social-list__item{
     width: 44px;
     height: 44px;
     border-radius: 50%;
@@ -26,7 +26,7 @@
     justify-content: center;
     align-items: center;
 }
-.social-item:hover .social-link{
+.social-list__item:hover .social-link{
     border-radius: 50%;
     background-color: getColor(main);
     fill: getColor(light);
@@ -45,7 +45,7 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: 100ms;
 }
-.section-team-title{
+.title-team{
     color: getColor(dark);
     font-weight: 700;
     font-size: 36px;
@@ -53,7 +53,7 @@
     text-align: center;
     margin-bottom: 50px;
 }
-.section-team-list-item{
+.list-team__item{
     padding-bottom: 30px;
     border-radius: 0 0 4px 4px;
     background-color: getColor(light);
@@ -71,7 +71,6 @@
 .section-team-list-item:hover{
     transform: scale(1.02);
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2), 0 4px 4px 0 rgba(0, 0, 0, 0.14), 0 4px 4px rgba(0, 0, 0, 0.12);
-    cursor: pointer;
 }
 .name{
     color: getColor(dark);
