--- a/scss/loyout/_01-header.scss
+++ b/scss/loyout/_01-header.scss
@@ -19,7 +19,7 @@
 .list-header{
     gap: 50px;
 }
-.link--list-item-header::after {
+.link-list-item-header::after {
     content: '';
     position: absolute;
     left: 0;
@@ -34,10 +34,10 @@
     transition-timing-function: ease;
 }
 
-.link--list-item-header.active::after {
+.link-list-item-header.active::after {
     transform: scaleX(1);
 }
-.link--list-item-header:hover::after {
+.link-list-item-header:hover::after {
     transform: scaleX(1);
 }
 .link-header{
@@ -61,7 +61,7 @@
     display: flex;
     align-items: center;
 }
-.link--list-item-header{
+.link-list-item-header{
     color: getColor(dark);
     font-weight: 500;
     font-size: 14px;
@@ -75,13 +75,13 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: 100ms;
 }
-.link--list-item-header:hover{
+.link-list-item-header:hover{
     color: getColor(main);
 }
 .header-list{
     gap: 30px;
 }
-.link--list-item{
+.link-list-item{
     color: getColor(text);
     fill: getColor(text);
     font-weight: 500;
@@ -97,7 +97,7 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: 100ms;
 }
-.list__item-header:hover .link--list-item{
+.list__item-header:hover .link-list-item{
     color: getColor(main);
     fill: getColor(main);
 
