--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,5 +1,5 @@
 .body{
-    font-family: 'Roboto';
+    font-family: getFont('font-family');
     font-weight: 700;
     font-size: 14px;
     line-height: 1.17;
