--- a/sass/loyout/_01-filter.scss
+++ b/sass/loyout/_01-filter.scss
@@ -14,9 +14,9 @@
     padding-bottom: 16px;
 }
 #active{
-    background-color: #2196F3;
+    background-color: getColor('main');
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
-    color: getColor(light);
+    color: getColor('light');
 }
 .project-list{
     display: grid;
@@ -31,15 +31,15 @@
     line-height: 162%;
     letter-spacing: 0.03em;
     text-align: center;
-    color: getColor(dark);
-    background-color: getColor(button-p);
+    color: getColor('dark');
+    background-color: getColor('button-p');
     border: 0;
     padding: 6px 24px;
     border-radius: 4px;
 }
 .list-item-button:hover{
-    background-color: getColor(main);
-    color: getColor(light);
+    background-color: getColor('main');
+    color: getColor('light');
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
     cursor: pointer;
 
