--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,5 +10,4 @@
 @import "./loyout/05-team";
 @import "./loyout/06-clients";
 @import "./loyout/07-footer";
-@import "./loyout/01-filter";
-@import "./loyout/02-projects";
+@import "./loyout/01-portfolio";
