--- a/css/main.css
+++ b/css/main.css
@@ -734,39 +734,27 @@ button:hover {
   cursor: pointer;
 }
 
-.filter-list {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
 .portfolio-section {
   padding: 94px 0;
 }
-
-.filter-list {
+.portfolio-section .container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+.portfolio-section .filter-title {
+  display: none;
+}
+.portfolio-section .filter-list {
   display: flex;
   justify-content: center;
   margin-bottom: 30px;
   padding-bottom: 16px;
 }
-
-#active {
-  background-color: #2196F3;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
-  color: #FFFFFF;
+.portfolio-section .filter-list .filter-list-item:not(:last-child) {
+  margin-right: 8px;
 }
-
-.project-list {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 30px;
-  list-style: none;
-  padding: 0;
-}
-
-.list-item-button {
+.portfolio-section .filter-list .filter-list-item .list-item-button {
   font-weight: 500;
   font-size: 16px;
   line-height: 162%;
@@ -777,62 +765,30 @@ button:hover {
   border: 0;
   padding: 6px 24px;
   border-radius: 4px;
-}
-
-.list-item-button:hover {
-  background-color: #2196F3;
-  color: #FFFFFF;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
-  cursor: pointer;
   transition-property: background, color, box-shadow;
   transition-duration: 500ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 100ms;
 }
-
-.filter-list-item:not(:last-child) {
-  margin-right: 8px;
+.portfolio-section .filter-list .filter-list-item .list-item-button:hover {
+  background-color: #2196F3;
+  color: #FFFFFF;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
-
-.filter-title {
-  display: none;
+.portfolio-section .filter-list .filter-list-item .list-item-button#active {
+  background-color: #2196F3;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
+  color: #FFFFFF;
 }
-
-.project-title {
-  text-align: center;
+.portfolio-section .project-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+  list-style: none;
+  padding: 0;
 }
-
-.div-text {
-  width: 370px;
-  height: 110px;
-  padding: 20px 23px 19px 23px;
-  border: solid #EEEEEE;
-  border-width: 0 1px 1px 1px;
-  background-color: #FFFFFF;
-  position: relative;
-}
-
-.project-item-title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 200%;
-  letter-spacing: 0.06em;
-  color: #212121;
-  justify-content: left;
-  margin-bottom: 4px;
-  text-wrap: nowrap;
-}
-
-.description-p {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 187%;
-  letter-spacing: 0.03em;
-  color: #757575;
-  justify-content: left;
-}
-
-.project-list-item {
+.portfolio-section .project-list .project-listitem {
   background-color: #FFFFFF;
   max-width: 370px;
   cursor: pointer;
@@ -840,20 +796,17 @@ button:hover {
   transition-duration: 500ms;
   transition-timing-function: ease;
 }
-
-.project-list-item:hover {
+.portfolio-section .project-list .project-listitem:hover {
   box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06), 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 }
-
-.box {
+.portfolio-section .project-list .box {
   position: relative;
   width: 370px;
   height: 404px;
   margin: 0 auto;
   overflow: hidden;
 }
-
-.overlay {
+.portfolio-section .project-list .box .overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -865,16 +818,45 @@ button:hover {
   transition-duration: 500ms;
   transition-timing-function: ease-in-out;
 }
-
-.box:hover .overlay {
-  transform: translatey(0);
-}
-
-.taxt {
+.portfolio-section .project-list .box .overlay .taxt {
   font-weight: 400;
   font-size: 18px;
   line-height: 156%;
   letter-spacing: 0.03em;
   color: #FFFFFF;
   padding: 63px 24px;
+}
+.portfolio-section .project-list .box:hover .overlay {
+  transform: translatey(0);
+}
+.portfolio-section .project-list .box .image {
+  width: 100%;
+  height: auto;
+}
+.portfolio-section .project-list .box .div-text {
+  width: 370px;
+  height: 110px;
+  padding: 20px 23px 19px 23px;
+  border: solid #EEEEEE;
+  border-width: 0 1px 1px 1px;
+  background-color: #FFFFFF;
+  position: relative;
+}
+.portfolio-section .project-list .box .div-text .project-item-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 200%;
+  letter-spacing: 0.06em;
+  color: #212121;
+  justify-content: left;
+  margin-bottom: 4px;
+  text-wrap: nowrap;
+}
+.portfolio-section .project-list .box .div-text .description-p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 187%;
+  letter-spacing: 0.03em;
+  color: #757575;
+  justify-content: left;
 }/*# sourceMappingURL=main.css.map */
