--- a/sass/loyout/_01-portfolio.scss
+++ b/sass/loyout/_01-portfolio.scss
@@ -61,7 +61,7 @@
     list-style: none;
     padding: 0;
 
-    .project-listitem {
+    .project-list__item {
       background-color: getColor('light');
       max-width: 370px;
       cursor: pointer;
