--- a/css/main.css
+++ b/css/main.css
@@ -37,16 +37,6 @@ button:hover {
   line-height: 1.17;
 }
 
-.list-header,
-.list-peculiarities,
-.list-doing,
-.list-team,
-.list-clients,
-.list-social {
-  display: flex;
-  justify-content: space-between;
-}
-
 .main-conteiner {
   width: 1600px;
   margin: 0 auto;
@@ -72,6 +62,8 @@ button:hover {
 }
 .header .list-header {
   gap: 50px;
+  display: flex;
+  justify-content: space-between;
 }
 .header .link-header {
   font-family: "Raleway";
@@ -155,8 +147,8 @@ button:hover {
 .nav-list,
 .header-list {
   display: flex;
-  list-style: none;
   align-items: center;
+  list-style: none;
 }
 
 .list__item-header:hover .link-list-item {
@@ -174,8 +166,8 @@ button:hover {
 }
 .hero .hero-div {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
 }
 .hero .title-hero {
   color: #FFFFFF;
@@ -486,8 +478,8 @@ button:hover {
   background-color: white;
   box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
   transform: scaleX(1);
   transition-property: transform, box-shadow;
   transition-duration: 500ms;
@@ -529,8 +521,8 @@ button:hover {
   height: 44px;
   border-radius: 50%;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 .section-team .social-list .social-list__item:hover .social-link {
   background-color: #2196F3;
@@ -563,8 +555,9 @@ button:hover {
 }
 .section-clients .list-clients {
   display: flex;
-  gap: 30px;
+  align-items: center;
   justify-content: center;
+  gap: 30px;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -776,7 +769,7 @@ button:hover {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
-.portfolio-section .filter-list .filter-list-item .list-item-button#active {
+.portfolio-section .filter-list .filter-list-item .list-item-button #active {
   background-color: #2196F3;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
   color: #FFFFFF;
