--- a/sass/loyout/_05-team.scss
+++ b/sass/loyout/_05-team.scss
@@ -13,17 +13,15 @@
     }
 
     .list-team {
-        display: flex;
-        justify-content: space-between;
+        @include flex-just;
         
         .list-team__item {
             padding-bottom: 30px;
             border-radius: 0 0 4px 4px;
             background-color: white;
             box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
-            display: flex;
+            @include flex-align;
             flex-direction: column;
-            align-items: center;
             transform: scaleX(1);
 
             transition-property: transform, box-shadow;
@@ -62,8 +60,7 @@
     }
 
     .social-list {
-        display: flex;
-        align-items: center;
+        @include flex-align;
         gap: 10px;
         margin-top: 16px;
 
@@ -71,9 +68,10 @@
             width: 44px;
             height: 44px;
             border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            // display: flex;
+            // justify-content: center;
+            // align-items: center;
+            @include flex-change(flex, center, center);
 
             &:hover .social-link {
                 background-color: getColor(main);
@@ -86,9 +84,10 @@
         width: 100%;
         height: 100%;
         fill: #AFB1B8;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
+        @include flex-change(flex, center, center);
         border-radius: 50%;
         
         transition-property: background, fill;
