--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,8 @@
 @import "./utils/variables";
 @import "./base/common";
 @import "./components/containers";
+@import "./utils/mixins";
+@import "./utils/placeholders";
 
 @import "./loyout/01-header";
 @import "./loyout/02-hero";
