--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -26,3 +26,7 @@
 @mixin backgraund($color) {
     background-color: $color;
 }
+@mixin just($key){
+    display: flex;
+    justify-content: $key;
+}
