--- a/sass/loyout/_01-header.scss
+++ b/sass/loyout/_01-header.scss
@@ -1,6 +1,7 @@
 .header {
     border-bottom: 1px solid getColor(border);
-    background-color: getColor(light);
+    // background-color: getColor(light);
+    @include backgraund(getColor(light));
     width: 1600px;
     height: 80px;
     text-wrap: nowrap;
@@ -74,7 +75,8 @@
         bottom: 0;
         width: 100%;
         height: 4px;
-        background-color: getColor(main);
+        // background-color: getColor(main);
+        @include backgraund(getColor(main));
         border-radius: 2px;
         transform: scaleX(0);
         transition-property: transform;
