--- a/sass/loyout/_02-hero.scss
+++ b/sass/loyout/_02-hero.scss
@@ -1,5 +1,6 @@
 .hero {
-    background-color: getColor(backgraund);
+    // background-color: getColor(backgraund);
+    @include backgraund(getColor(backgraund));
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -26,7 +27,8 @@
     }
   
     .button-hero {
-      background-color: getColor(main);
+    //   background-color: getColor(main);
+      @include backgraund(getColor(main));
       color: getColor(light);
       border-radius: 4px;
       font-weight: 700;
@@ -51,7 +53,8 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.2);
+    //   background-color: rgba(0, 0, 0, 0.2);
+    @include backgraund( rgba(0, 0, 0, 0.2));
       z-index: 2;
   
       &.is-hidden .modal {
@@ -68,7 +71,8 @@
       width: 528px;
       height: 581px;
       padding: 40px;
-      background-color: getColor(light);
+    //   background-color: getColor(light);
+    @include backgraund(getColor(light));
       transform: translate(-50%, -50%);
       transition-property: transform, opacity;
       transition-duration: 500ms;
@@ -159,7 +163,8 @@
         border-radius: 100%;
         fill: #000;
         border: 1px solid rgba(0, 0, 0, 0.1);
-        background-color: getColor(light);
+        // background-color: getColor(light);
+        @include backgraund(getColor(light));
         width: 31px;
         height: 31px;
   
