--- a/sass/loyout/_04-doing.scss
+++ b/sass/loyout/_04-doing.scss
@@ -34,7 +34,8 @@
                 text-transform: uppercase;
                 text-align: center;
                 color: getColor(light);
-                background-color: rgba(47, 48, 58, 0.8);
+                // background-color: rgba(47, 48, 58, 0.8);
+                @include backgraund( rgba(47, 48, 58, 0.8));
                 position: absolute;
                 bottom: 0;
                 width: 100%;
