--- a/sass/loyout/_07-footer.scss
+++ b/sass/loyout/_07-footer.scss
@@ -1,5 +1,6 @@
 .footer {
-    background-color: getColor('backgraund');
+    // background-color: getColor('backgraund');
+    @include backgraund(getColor(backgraund));
     padding: 60px 0;
 
     .footer__adress {
@@ -90,7 +91,8 @@
                 width: 44px;
                 height: 44px;
                 border-radius: 50%;
-                background-color: rgba(255, 255, 255, 0.1);
+                // background-color: rgba(255, 255, 255, 0.1);
+                @include backgraund( rgba(255, 255, 255, 0.1));
 
                 .social-link {
                     width: 100%;
@@ -106,7 +108,8 @@
                     justify-content: center;
 
                     &:hover {
-                        background-color: getColor('main');
+                        // background-color: getColor('main');
+                        @include backgraund(getColor(main));
                         fill: getColor('light');
                     }
                 }
@@ -137,7 +140,8 @@
                 width: 358px;
                 height: 50px;
                 box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-                background: rgba(33, 150, 243, 0);
+                // background: rgba(33, 150, 243, 0); 
+                @include backgraund(rgba( 33, 150, 243,0));
                 font-weight: 400;
                 font-size: 16px;
                 line-height: 125%;
@@ -163,7 +167,8 @@
                 color: getColor('light');
                 border-radius: 4px;
                 box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-                background: #2196f3;
+                // background: #2196f3;
+                @include backgraund(getColor(main));
                 border: none;
                 padding: 10px 28px;
                 gap: 10px;
