--- a/css/main.css
+++ b/css/main.css
@@ -238,7 +238,8 @@ button:hover {
   font-size: 12px;
   letter-spacing: 0.01em;
   color: #757575;
-  margin-bottom: 10px;
+  margin-bottom: 4px;
+  display: block;
 }
 .hero .modal .div-checkbox {
   margin-top: 20px;
