--- a/sass/loyout/_02-hero.scss
+++ b/sass/loyout/_02-hero.scss
@@ -92,7 +92,8 @@
         font-size: 12px;
         letter-spacing: 0.01em;
         color: getColor(text);
-        margin-bottom: 10px;
+        margin-bottom: 4px;
+        display: block;
       }
   
       .div-checkbox {
