--- a/css/main.css
+++ b/css/main.css
@@ -36,18 +36,6 @@ button:hover {
   font-size: 14px;
   line-height: 1.17;
 }
-@media screen {
-  .body {
-    min-width: 1700px;
-    background-color: blanchedalmond;
-  }
-}
-@media screen {
-  .body {
-    max-width: 1800px;
-    background-color: green;
-  }
-}
 
 .main-conteiner {
   width: 1600px;
@@ -58,6 +46,21 @@ button:hover {
   width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
+}
+@media screen and (min-width: mobile) {
+  .conteiner {
+    width: 480px;
+  }
+}
+@media screen and (min-width: tablet) {
+  .conteiner {
+    width: 768px;
+  }
+}
+@media screen and (min-width: desktop) {
+  .conteiner {
+    width: 1200px;
+  }
 }
 
 .header {
