--- a/sass/components/_containers.scss
+++ b/sass/components/_containers.scss
@@ -8,4 +8,14 @@
     margin: 0 auto;
     padding: 0 15px;
     // outline: 1px red dashed; 
+
+    @media screen and (min-width: mobile) {
+        width: 480px;
+    }
+    @media screen and (min-width: tablet) {
+        width: 768px;
+    }
+    @media screen and (min-width: desktop) {
+        width: 1200px;
+    }
 }
