--- a/sass/components/_containers.scss
+++ b/sass/components/_containers.scss
@@ -2,6 +2,16 @@
     width: 1600px;  
     margin: 0 auto;
     // outline: 1px red dashed; 
+    
+    @media screen and (min-width: 480px) {
+        width: 480px;
+    }
+    @media screen and (min-width: 768px) {
+        width: 768px;
+    }
+    @media screen and (min-width: 1200px) {
+        width: 1200px;
+    }
 }
 .conteiner{
     width: 1200px;
@@ -9,13 +19,13 @@
     padding: 0 15px;
     // outline: 1px red dashed; 
 
-    @media screen and (min-width: mobile) {
+    @media screen and (min-width: 480px) {
         width: 480px;
     }
-    @media screen and (min-width: tablet) {
+    @media screen and (min-width: 768px) {
         width: 768px;
     }
-    @media screen and (min-width: desktop) {
+    @media screen and (min-width: 1200px) {
         width: 1200px;
     }
 }
