--- a/sass/loyout/_03-pecularities.scss
+++ b/sass/loyout/_03-pecularities.scss
@@ -1,62 +1,119 @@
-.section-peculiarities {
-    padding-top: 94px;
-    
-    .title-peculiarities {
-        color: getColor(dark);
-        font-size: 36px;
-        text-align: center;
-        margin-bottom: 50px;
-        display: none;
-    }
-    
-    .list-peculiarities {
-        @include flex-just;
+@media screen and (min-width: 1200px) {
+    .section-peculiarities {
+        padding-top: 94px;
         
-        .list__item-peculiarities {
-            width: 270px;
+        .title-peculiarities {
+            color: getColor(dark);
+            font-size: 36px;
+            text-align: center;
+            margin-bottom: 50px;
+            display: none;
+        }
+        
+        .list-peculiarities {
+            @include flex-just;
             
-            &::before {
-                content: '';
-                display: block;
-                width: 100%;
-                height: 120px;
-                margin-bottom: 30px;
-                border-radius: 4px;
-                background-repeat: no-repeat;
-                background-position: center;
-                // background-color: getColor(gray);
-                @include backgraund(getColor(gray));
-            }
-
-            &:nth-child(1)::before {
-                background-image: url(../images/antenna.svg);
-            }
-
-            &:nth-child(2)::before {
-                background-image: url(../images/clock.svg);
-            }
-
-            &:nth-child(3)::before {
-                background-image: url(../images/diagram.svg);
-            }
-
-            &:nth-child(4)::before {
-                background-image: url(../images/astronaut.svg);
+            .list__item-peculiarities {
+                width: 270px;
+                
+                &::before {
+                    content: '';
+                    display: block;
+                    width: 100%;
+                    height: 120px;
+                    margin-bottom: 30px;
+                    border-radius: 4px;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    // background-color: getColor(gray);
+                    @include backgraund(getColor(gray));
+                }
+    
+                &:nth-child(1)::before {
+                    background-image: url(../images/antenna.svg);
+                }
+    
+                &:nth-child(2)::before {
+                    background-image: url(../images/clock.svg);
+                }
+    
+                &:nth-child(3)::before {
+                    background-image: url(../images/diagram.svg);
+                }
+    
+                &:nth-child(4)::before {
+                    background-image: url(../images/astronaut.svg);
+                }
             }
         }
+    
+        .peculiarities-title {
+            color: getColor(dark);
+            font-weight: 700;
+            font-size: 14px;
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+            margin-bottom: 10px;
+        }
+    
+        .description {
+            color: getColor(text);
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 171%;
+            letter-spacing: 0.03em;
+        }
     }
+}
+@media screen and (min-width: 480px) {
+    .section-peculiarities{
+        padding-top: 60px;
+    }
+    .title-peculiarities {
+        display: none;
+    }
+    .list__item-peculiarities {
+        width: 450px;
+        padding-bottom: 30px;
+        
+        &::before {
+            content: '';
+            display: block;
+            width: 100%;
+            height: 120px;
+            margin-bottom: 30px;
+            border-radius: 4px;
+            background-repeat: no-repeat;
+            background-position: center;
+            // background-color: getColor(gray);
+            @include backgraund(getColor(gray));
+        }
 
-    .peculiarities-title {
-        color: getColor(dark);
+        &:nth-child(1)::before {
+            background-image: url(../images/antenna.svg);
+        }
+
+        &:nth-child(2)::before {
+            background-image: url(../images/clock.svg);
+        }
+
+        &:nth-child(3)::before {
+            background-image: url(../images/diagram.svg);
+        }
+
+        &:nth-child(4)::before {
+            background-image: url(../images/astronaut.svg);
+        }
+    }
+    .title-item-peculiarities{
         font-weight: 700;
         font-size: 14px;
         letter-spacing: 0.03em;
         text-transform: uppercase;
-        margin-bottom: 10px;
+        text-align: center;
+        padding-bottom: 10px;
     }
-
-    .description {
-        color: getColor(text);
+    .description{
         font-weight: 400;
         font-size: 14px;
         line-height: 171%;
