--- a/sass/loyout/_05-team.scss
+++ b/sass/loyout/_05-team.scss
@@ -1,3 +1,4 @@
+@media screen and (min-width: 1200px) {
 .section-team {
     // background-color: getColor(gray);
     @include backgraund(getColor(gray));
@@ -75,6 +76,103 @@
             @include flex-change(flex, center, center);
 
             &:hover .social-link {
+                // background-color: getColor(main);
+                @include backgraund(getColor(main));
+                fill: getColor(light);
+            }
+        }
+    }
+
+    .social-link {
+        width: 100%;
+        height: 100%;
+        fill: #AFB1B8;
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
+        @include flex-change(flex, center, center);
+        border-radius: 50%;
+        
+        transition-property: background, fill;
+        transition-duration: 500ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-delay: 100ms;
+    }
+}
+}
+@media screen and (min-width: 480px) {
+    .section-team {
+        @include backgraund(getColor(gray));
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+    .title-team {
+        color: getColor(dark);
+        font-weight: 700;
+        font-size: 28px;
+        letter-spacing: 0.03em;
+        text-align: center;
+        margin-bottom: 30px;
+    }
+    .list-team__item {
+        padding-bottom: 24px;
+        border-radius: 0 0 4px 4px;
+        @include backgraund(getColor(light));
+        box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+        @include flex-align;
+        flex-direction: column;
+        transform: scaleX(1);
+
+        transition-property: transform, box-shadow;
+        transition-duration:  500ms;
+        transition-timing-function: ease;
+        transition-delay:  100ms;
+
+        &:hover {
+            transform: scale(1.02);
+            box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2), 0 4px 4px 0 rgba(0, 0, 0, 0.14), 0 4px 4px rgba(0, 0, 0, 0.12);
+        }
+        .team-image{
+            width: 450px;
+            height: 460px;
+            margin-bottom: 30px;
+        }
+    }
+    .list-team__item:not(:last-child){
+        margin-bottom: 30px;
+    }
+    .name {
+        color: getColor(dark);
+        font-weight: 500;
+        font-size: 16px;
+        letter-spacing: 0.03em;
+        text-align: center;
+        padding-bottom: 10px;
+    }
+
+    .profession {
+        color: getColor(text);
+        font-weight: 400;
+        font-size: 16px;
+        letter-spacing: 0.03em;
+        text-align: center;
+        padding-bottom: 16px;
+    }
+    .social-list {
+        @include flex-align;
+        gap: 10px;
+        margin-top: 16px;
+
+        .social-list__item {
+            width: 44px;
+            height: 44px;
+            border-radius: 50%;
+            // display: flex;
+            // justify-content: center;
+            // align-items: center;
+            @include flex-change(flex, center, center);
+
+            .social-list__item:hover .social-link {
                 // background-color: getColor(main);
                 @include backgraund(getColor(main));
                 fill: getColor(light);
