--- a/sass/loyout/_06-clients.scss
+++ b/sass/loyout/_06-clients.scss
@@ -1,3 +1,4 @@
+@media screen and (min-width: 1200px) {
 .section-clients {
     padding: 94px 0;
 
@@ -39,6 +40,56 @@
         border: 1px solid #AFB1B8;
         border-radius: 4px;
         width: 170px;
+        height: 92px;
+
+        transition: border 500ms cubic-bezier(0.4, 0, 0.2, 1) 100ms,
+        fill 500ms cubic-bezier(0.4, 0, 0.2, 1) 100ms;
+    }
+}
+}
+@media screen and (min-width: 480px) {
+    .section-clients {
+        padding: 60px 0;
+    }
+    .title-clients {
+        font-weight: 700;
+        font-size: 28px;
+        letter-spacing: 0.03em;
+        text-align: center;
+        color: getColor('dark');
+        margin-bottom: 50px;
+    }
+    .list-clients {
+        // display: flex;
+        // justify-content: center;
+        @include flex-change(flex, center, center);
+        gap: 30px;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 30px;
+
+        .list-clients__item {
+
+            &:hover {
+                .link-clients {
+                    border-color: getColor('main');
+                    fill: getColor('main');
+                }
+            }
+        }
+    }
+    .link-clients {
+        // display: flex;
+        // align-items: center;
+        // justify-content: center;
+        @include flex-change(flex, center, center);
+        fill: #AFB1B8;
+        border: 1px solid #AFB1B8;
+        border-radius: 4px;
+        width: 210px;
         height: 92px;
 
         transition: border 500ms cubic-bezier(0.4, 0, 0.2, 1) 100ms,
