--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import "./components/containers";
 @import "./utils/mixins";
 @import "./utils/placeholders";
+@import "./utils/breakpoints";
 
 @import "./loyout/01-header";
 @import "./loyout/02-hero";
