--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,9 @@ button:hover {
 .main-conteiner {
   width: 1600px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 @media screen and (min-width: 480px) {
   .main-conteiner {
@@ -944,6 +947,7 @@ main {
 .footer {
   background-color: #2F303A;
   padding: 60px 0;
+  width: 100vw;
 }
 .footer .footer__adress {
   font-style: normal;
