--- a/sass/components/_containers.scss
+++ b/sass/components/_containers.scss
@@ -1,6 +1,8 @@
 .main-conteiner{
     width: 1600px;  
     margin: 0 auto;
+    display: flex;flex-direction: column;
+    align-items: center;
     // outline: 1px red dashed; 
 
     @media screen and (min-width: 480px) {
