--- a/sass/loyout/_07-footer.scss
+++ b/sass/loyout/_07-footer.scss
@@ -1,6 +1,7 @@
 .footer {
     background-color: getColor('backgraund');
     padding: 60px 0;
+    width: 100vw;
 
     .footer__adress {
         font-style: normal;
