--- a/sass/loyout/_03-pecularities.scss
+++ b/sass/loyout/_03-pecularities.scss
@@ -1,6 +1,7 @@
 .section-peculiarities {
     padding-top: 60px;
     padding-bottom: 60px;
+    min-width: 100vw;
     
     .title-peculiarities {
         color: getColor(dark);
