--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ button:hover {
 }
 @media screen and (min-width: 1200px) {
   .main-conteiner {
-    width: 1200px;
+    width: 1600px;
   }
 }
 
@@ -90,6 +90,7 @@ main {
 .header {
   height: 60px;
   padding-top: 16px;
+  min-width: 100vw;
 }
 
 .header-div {
@@ -583,6 +584,7 @@ main {
 .section-peculiarities {
   padding-top: 60px;
   padding-bottom: 60px;
+  min-width: 100vw;
 }
 .section-peculiarities .title-peculiarities {
   color: #212121;
@@ -680,6 +682,7 @@ main {
 }
 .section-doing {
   display: none;
+  min-width: 100vw;
 }
 
 @media screen and (min-width: 1200px) {
@@ -733,7 +736,7 @@ main {
   background-color: #f5f4fa;
   padding-top: 60px;
   padding-bottom: 60px;
-  width: 100vw;
+  min-width: 100vw;
 }
 .section-team .team-div {
   display: flex;
@@ -875,6 +878,7 @@ main {
 }
 .section-clients {
   padding: 60px 0;
+  min-width: 100vw;
 }
 .section-clients .title-clients {
   font-weight: 700;
@@ -947,7 +951,7 @@ main {
 .footer {
   background-color: #2F303A;
   padding: 60px 0;
-  width: 100vw;
+  min-width: 100vw;
 }
 .footer .footer__adress {
   font-style: normal;
