--- a/sass/components/_containers.scss
+++ b/sass/components/_containers.scss
@@ -1,7 +1,8 @@
 .main-conteiner{
     width: 1600px;  
     margin: 0 auto;
-    display: flex;flex-direction: column;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     // outline: 1px red dashed; 
 
@@ -12,7 +13,7 @@
         width: 768px;
     }
     @media screen and (min-width: 1200px) {
-        width: 1200px;
+        width: 1600px;
     }
 }
 .conteiner{
